--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -30,9 +30,9 @@
 	itmill.toolkitConfigurations = {};
 	itmill.themesLoaded = {};
 	document.write('<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>');
-	document.write("<script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'><\/script>");
+	document.write("<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'><\/script>");
 	}
-	itmill.toolkitConfigurations["itmill-ajax-window"] = {appUri:'/Reservr', pathInfo: '/', themeUri:'/ITMILL/themes/reservr'};
+	itmill.toolkitConfigurations["itmill-ajax-window"] = {appUri:'../../../Reservr', pathInfo: '/', themeUri:'../../../ITMILL/themes/reservr'};
 	//]]>
 	</script>
 	<script type="text/javascript">
@@ -41,7 +41,7 @@
 	var stylesheet = document.createElement('link');
 	stylesheet.setAttribute('rel', 'stylesheet');
 	stylesheet.setAttribute('type', 'text/css');
-	stylesheet.setAttribute('href', '/ITMILL/themes/reservr/styles.css');
+	stylesheet.setAttribute('href', 'ITMILL/themes/reservr/styles.css');
 	document.getElementsByTagName('head')[0].appendChild(stylesheet);
 	itmill.themesLoaded['reservr'] = true;
 	}
