--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -78,11 +78,12 @@ of fixed problems.</p>
   some other good unzip program for Windows.</li>
 
   <li><a href="http://dev.itmill.com/ticket/1636">#1636</a> Incompatibility with some
-  versions of Firefox and other browsers based on Gekko 1.7. For example, the hosted mode
-  browser of Google Web Toolkit 1.4.62 (included in IT Mill Toolkit) does not work in
-  Linux. This is due to the new client-side loader code. For a workaround for hosted mode
-  browser, use a custom loader HTML page, see for example the <tt>multiapp.html</tt> demo
-  page.</li>
+  versions of Firefox and other browsers based on Gekko 1.7. For example, the <i>hosted
+  mode browser of Google Web Toolkit 1.4.62 (included in IT Mill Toolkit) does not work
+  fully in Linux</i> so the the new feature for having multiple applications per page is
+  not possible. This is due to the new client-side loader code. For a workaround for
+  loading multiple applications per page, use a static HTML loader page, see for example
+  the <tt>multiapp.html</tt> demo page.</li>
 
 </ul>
 
