--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -33,12 +33,21 @@
   changes are possible, including API changes, before the stable release.
 </p>
 
-    <h2>Important Changes</h2>
+    <h2>Important API Changes</h2>
     
 <p>The <version></version> release if IT Mill Toolkit includes new features and a number
-of fixed problems.</p>
+of fixed problems. You should also notice the changes that cause backward incompatibility
+with existing applications, mainly caused by the new support for multiple applications per
+page.</p>
 
 <ul>
+  <li>Support for multiple applications in the same browser window (already in 5.1.2).
+  See <tt>WebContent/multiapp.html</tt> for an example on how to embed multiple
+  applications.<p><i><b>IMPORTANT!</b> If you have embedded Toolkit Applications in a HTML
+  page with earlier versions of IT Mill Toolkit, you must update the embedding page! Run
+  the application separately, view the source code, and copy the loading code to your HTML
+  page.</i></p></li>
+
   <li>Support for Java Portlets. See the following dev.itmill.com wiki articles for details.</li>
 
   <ul>
@@ -46,22 +55,21 @@ of fixed problems.</p>
     <li><a href="http://dev.itmill.com/wiki/Articles/SimplePortalIntegration">Simple IT Mill Toolkit Portal Integration</a> -- instructions for using the portal integration</li>
   </ul>
 
-  <li>Default theme has been collected in a single CSS file in
-  <tt>WebContent/ITMILL/themes/default/styles.css</tt>, which is a compilation of the
-  separate CSS files in the subdirectories. Custom themes must inherit this stylesheet
-  with the <tt>import</tt> command:
-<pre>@import "../default/styles.css";</pre></li>
+  <li>The root style identifier <tt>#itmill-ajax-window</tt> if IT Mill Toolkit
+  applications has changed to style class <tt>.i-app</tt>. This change will affect all
+  applications that match for the style identifier in the style sheets and the rules have
+  to be updated to the new convention. This is part of the changes for supporting multiple
+  applications per page.</li>
+
+  <li>To speed up the loading time of applications, the default theme has been collected
+  into a single CSS file in <tt>WebContent/ITMILL/themes/default/styles.css</tt>, which is
+  a compilation of the separate CSS files for different components. <b>Custom themes must
+  inherit this stylesheet</b> with the <tt>import</tt> command: <pre>@import
+  "../default/styles.css";</pre></li>
 
   <li>The default theme for <b>TabSheet</b> has changed in a way that may cause
   incompatibility with custom styling. If you have problems, just ask on the <a
   href="http://forum.itmill.com/">forum</a>.</li>
-
-  <li>(Since 5.1.2) <p>Support for multiple applications in the same browser window.  See
-  <tt>WebContent/multiapp.html</tt> for an example on how to embed multiple
-  applications.</p><p><i><b>IMPORTANT!</b> If you have embedded Toolkit Applications in a
-  HTML page with earlier versions of IT Mill Toolkit, you must update the embedding page! 
-  Run the application separately, view the source code, and copy the loading code to your
-  HTML page.</i></p></li>
 
   <li>Many bug fixes. See the ChangeLog below.</li>
 
