removed class="i-generated-body" - it's not generated
svn changeset:4642 branch:trunk

--- a/WebContent/multiapp.html
+++ b/WebContent/multiapp.html
@@ -30,7 +30,7 @@
 <script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.terminal.gwt.DefaultWidgetSet/com.itmill.toolkit.terminal.gwt.DefaultWidgetSet.nocache.js'></script>
 <link REL="stylesheet" TYPE="text/css" HREF="/ITMILL/themes/example/styles.css">
 </head>
-<body class="i-generated-body">
+<body>
 	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>
 	
 	<p>Multiple toolkits per html file test page</p>
