HTML now FF1.0 compatible (for Linux hostedmode)
svn changeset:4822 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -17,36 +17,29 @@
 	<script src="http://maps.google.com/maps?file=api&v=2" type="text/javascript"></script>
 </head>
 <body>
-	<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe>
-	<div id="header">
-		<span id="logo"> Reservr Inc</span>
-		<span id="arrow"> </span>
-		<span id="slogan">Representational cars on-the-road</span>
-	</div>
-	<script type="text/javascript">
-	//<![CDATA[
+<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>
+<script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
+<script type="text/javascript">
+//<![CDATA[
 	if(!itmill || !itmill.toolkitConfigurations) {
 	 if(!itmill) { var itmill = {}} 
 	itmill.toolkitConfigurations = {};
-	itmill.themesLoaded = {};
-	document.write('<iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>');
-	document.write("<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'><\/script>");
-	}
-	itmill.toolkitConfigurations["itmill-ajax-window"] = {appUri:'../../../Reservr', pathInfo: '/', themeUri:'../../../ITMILL/themes/reservr'};
-	//]]>
-	</script>
-	<script type="text/javascript">
-	//<![CDATA[
+	itmill.themesLoaded = {}};
+	itmill.toolkitConfigurations["Reservr"] = {appUri:'/Reservr', pathInfo: '/', themeUri:'/ITMILL/themes/reservr'};
+//]]>
+</script>
+<script type="text/javascript">
+//<![CDATA[
 	if(!itmill.themesLoaded['reservr']) {
 	var stylesheet = document.createElement('link');
 	stylesheet.setAttribute('rel', 'stylesheet');
 	stylesheet.setAttribute('type', 'text/css');
-	stylesheet.setAttribute('href', 'ITMILL/themes/reservr/styles.css');
+	stylesheet.setAttribute('href', '/ITMILL/themes/reservr/styles.css');
 	document.getElementsByTagName('head')[0].appendChild(stylesheet);
 	itmill.themesLoaded['reservr'] = true;
 	}
-	//]]>
-	</script>
-	<div id="itmill-ajax-window" class="i-app"></div>	
+//]]>
+</script>
+<div id="Reservr" class="i-app" ></div>
 </body>
 </html>
