Fixed reservrs header.
svn changeset:4845 branch:trunk

--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -17,6 +17,12 @@
 	<script src="http://maps.google.com/maps?file=api&v=2" type="text/javascript"></script>
 </head>
 <body>
+	<div id="header">
+		<span id="logo"> Reservr Inc</span>
+		<span id="arrow"> </span>
+		<span id="slogan">Representational cars on-the-road</span>
+	</div>
+
 <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>
 <script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
 <script type="text/javascript">
