--- a/WebContent/reservr.html
+++ b/WebContent/reservr.html
@@ -24,14 +24,14 @@
 	</div>
 
 <iframe id="__gwt_historyFrame" style="width:0;height:0;border:0;overflow:hidden" src="javascript:false"></iframe>
-<script language='javascript' src='/ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
+<script language='javascript' src='ITMILL/widgetsets/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet/com.itmill.toolkit.demo.reservation.gwt.ReservationWidgetSet.nocache.js'></script>
 <script type="text/javascript">
 //<![CDATA[
 	if(!itmill || !itmill.toolkitConfigurations) {
 	 if(!itmill) { var itmill = {}} 
 	itmill.toolkitConfigurations = {};
 	itmill.themesLoaded = {}};
-	itmill.toolkitConfigurations["Reservr"] = {appUri:'/Reservr', pathInfo: '/', themeUri:'/ITMILL/themes/reservr'};
+	itmill.toolkitConfigurations["Reservr"] = {appUri:'../../../Reservr', pathInfo: '/', themeUri:'../../../ITMILL/themes/reservr'};
 //]]>
 </script>
 <script type="text/javascript">
@@ -40,7 +40,7 @@
 	var stylesheet = document.createElement('link');
 	stylesheet.setAttribute('rel', 'stylesheet');
 	stylesheet.setAttribute('type', 'text/css');
-	stylesheet.setAttribute('href', '/ITMILL/themes/reservr/styles.css');
+	stylesheet.setAttribute('href', 'ITMILL/themes/reservr/styles.css');
 	document.getElementsByTagName('head')[0].appendChild(stylesheet);
 	itmill.themesLoaded['reservr'] = true;
 	}
