--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -159,7 +159,7 @@
 				<ul id="demo-buttons">
 					<li id="feature-browser"><a href="FeatureBrowser/">Feature browser</a></li>
 					<li id="notifications"><a href="NotificationDemo/">Notifications</a></li>
-					<li id="reservr"><a href="reservr.html">Reservation application</a></li>
+					<li id="reservr"><a href="Reservr/">Reservation application</a></li>
 					<li id="windowed-demos"><a href="WindowedDemos">Windowed demos</a></li>
 					<li class="clearer"></li> <!-- // simplifies things in JavaScipt -->
 				</ul>
