Removed invalid wiki links from Release Notes for Toolkit 5.3.0.
svn changeset:6048 branch:trunk

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -84,13 +84,13 @@ Toolkit</a> for details.</p>
 have 100% width by default. These components are:</p>
 
 <ul>
-  <li>Vertical <a class="missing wiki" href="/wiki/OrderedLayout" rel="nofollow">OrderedLayout</a> (vertical via constructor, not via setOrientation method)</li>
+  <li>Vertical <b>OrderedLayout</b> (vertical via constructor, not via setOrientation method)</li>
   <li>Window</li>
   <li>Panel</li>
-  <li><a href="http://dev.itmill.com/wiki/TabSheet" rel="nofollow">TabSheet</a></li>
-  <li><a href="http://dev.itmill.com/wiki/SplitPanel" rel="nofollow">SplitPanel</a> (note that SplitPanel also has 100% height by default)</li>
+  <li><b>TabSheet</b></li>
+  <li><b>SplitPanel</b> (note that SplitPanel also has 100% height by default)</li>
   <li>Form</li>
-  <li><a href="http://dev.itmill.com/wiki/FormLayout" rel="nofollow">FormLayout</a></li>
+  <li><b>FormLayout</b></li>
 </ul>
 
 <h2 id="Customtailoredclientsidecomponents">Custom Tailored Client-Side Components</h2>
