--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -207,7 +207,7 @@
 				<h4>Eclipse IDE QuickStart</h4>
 				<p>The easiest way to start working with IT Mill Toolkit is to 
 				use Eclipse IDE with the Toolkit QuickStart project.
-				<a href="doc/manual/ch01s05.html" class="more">Instant Toolkit workspace for Eclipse</a></p>
+				<a href="doc/manual/intro.quickstart.html" class="more">Instant Toolkit workspace for Eclipse</a></p>
 				
 			</div> <!-- /getting-started -->
 			
