Fix for #2542 - Feedback form problem
svn changeset:6758 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -277,6 +277,7 @@
 					<input name="FormType" type="hidden" value="7" />
 					Send a quick message to Toolkit R&D team:<br />
 					<textarea name="feedback" cols="38" rows="3" multiline="true">Comments, suggestions, bug reports - anything.</textarea><br />
+					<input type="hidden" value="itmill" name="Human"/>
 					<input type="submit" value="Send" />
 					</form>
 				<div class="bottom"></div>
