Added a comment to Release Notes regarding #2563, regarding the default width of Label.
svn changeset:6880 branch:trunk

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -144,7 +144,11 @@ Now some containers have 100% width by default. These components are:</p>
 	height by default)</li>
 	<li><b>Form</b></li>
 	<li><b>FormLayout</b></li>
+	<li><b>Label</b></li>
 </ul>
+
+<p>If the width of a <b>Label</b> is set defined, as is now the default, the label text
+will wrap appropriately, but if it is set as undefined, the text will never wrap.</p>
 
 <h3>Miscellaneous Layout Changes</h3>
 
