Fixes #2619: Remove redundant Sampler "version number" from index-page
svn changeset:6889 branch:trunk

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -101,7 +101,7 @@
 			<div id="demos">
 				<h2>Demos</h2>
 				
-				<h4 id="sampler"><a class="demoapp" href="sampler/" title="Open Sampler">Open Sampler</a> <span>1.0</span></h4>
+				<h4 id="sampler"><a class="demoapp" href="sampler/" title="Open Sampler">Open Sampler</a></h4>
 				<h4>IT Mill Toolkit Sampler</h4>
 				<p><a href="sampler/" title="Open Sampler">Sampler</a> contains examples of most features, as well as combination examples and useful UI patterns that you can use simply by copy-pasting the code.</p>
 				
