Added Java application server compatibility list to Release Notes: #2538. From #2360.
svn changeset:6943 branch:trunk

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -322,11 +322,25 @@ for your platform.</p>
 
 	<li>Mac OS X Tiger (mac) or Leopard (leopard)</li>
 
-	<li>Other UNIX operating systems such as Sun Solaris using the
-	Linux installation package.</li>
+	<li>Other UNIX operating systems, such as Sun Solaris, using the installation package
+	for Linux.</li>
 </ul>
 
-<p>IT Mill Toolkit supports the following browsers:</p>
+<p>IT Mill Toolkit supports Java Servlet API 2.3 and later versions and should work with
+any Java application servers that conform to the standard. It supports the following
+application servers:</p>
+
+<ul>
+    <li>Apache Tomcat, version 4.1 or later</li>
+    <li>BEA WebLogic&reg; Server, version 9.2 or later</li>
+    <li>IBM WebSphere&reg; Application Server, version 6.1 or later</li>
+    <li>JBoss Application Server, version 3.2.8 or later</li>
+    <li>Jetty, version 5 or later</li>
+    <li>Glassfish, version 2 or later</li>
+</ul>
+
+<p>IT Mill Toolkit supports the following browsers for using the applications made with
+it:</p>
 
 <ul>
 	<li>Mozilla Firefox releases 2, and 3 (see notice above about
@@ -336,9 +350,9 @@ for your platform.</p>
 	<li>Opera 9.6</li>
 </ul>
 
-<p>There may be differences between the exact versions of the
-supported browsers that may cause incompatibility with applications made
-with IT Mill Toolkit.</p>
+<p>There may be differences between the exact versions of the supported browsers that may
+cause incompatibility with applications made with IT Mill Toolkit. Support for Opera
+has currently some limitations, such as the front page of the Sampler demo.</p>
 
 <p>The following browsers are not supported but have been found to
 work to a large degree:</p>
@@ -346,15 +360,14 @@ work to a large degree:</p>
 	<li>Safari 2</li>
 	<li>Firefox 1.5</li>
 	<li>iPhone</li>
-	<li>Galeon, Epiphany and other Gecco-based browsers (see notice
-	about Gecco 1.7 above)</li>
-	<li>Nokia Internet Tablet N800 and N810 (ITOS 2008)</li>
+	<li>Epiphany, Galeon, and other Gecco-based browsers (see notice
+	about Gecco 1.7 above).</li>
+    <li>Nokia Internet Tablet N800 and N810 (ITOS 2008, Opera-based browser).</li>
 </ul>
 
-<p>Nokia E-series phones with at least 128MB of memory have been
-known to work with older versions, but not with IT Mill Toolkit 5.2.x.
-Konqueror, the default browser in many Linux distributions, is known to
-have limited usability.</p>
+<p>Nokia E-series phones with at least 128MB of memory have been known to work with older
+versions, but not with IT Mill Toolkit 5.2 and later.  Konqueror, the default browser in
+many Linux distributions, is known to not work.</p>
 
 <!-- h2>ChangeLog Between IT Mill Toolkit 5.1.2 and 5.2.0</h2 --></div>
 <!-- /getting-started -->
