--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -47,6 +47,10 @@ web site</span></a>.</p>
 <p>As GWT now requires Java 5, support for Java 1.4 is discontinued
 also in IT Mill Toolkit.</p>
 
+<p>IT Mill Toolkit supports the Sun Microsystems JDK and JRE, though others should work as
+well. When running the demo application, the Jetty web server may produce errors in the
+console if using certain other Java implementations, especially the GNU JRE.</p>
+
 <h2>Debug Mode Enabled by Default</h2>
 
 <p>The debug mode is now enabled by default, to allow debugging
