Moved Firefox 2 from supported to unsupported-but-should-work list. Fixes #2928.
svn changeset:7764 branch:6.0

--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -109,8 +109,7 @@ application servers:</p>
 it:</p>
 
 <ul>
-	<li>Mozilla Firefox releases 2, and 3 (see notice above about
-	Gecko 1.7).</li>
+	<li>Mozilla Firefox release 3</li>
 	<li>Internet Explorer releases 6, 7, and 8<sup>&#8224;</sup>.</li>
 	<li>Safari 3</li>
 	<li>Opera 9.6<sup>&#8225;</sup></li>
@@ -134,12 +133,11 @@ work to a large degree:</p>
 
 <ul>
 	<li>Safari 2, and 4 beta</li>
-	<li>Firefox 1.5</li>
+	<li>Firefox 1.5 and 2</li>
     <li>Google Chrome 1.0.x (available only for Windows)</li>
 	<li>iPhone (firmware 2.2)</li>
     <li>Midori (0.1.2)</li>
-	<li>Epiphany (2.22.3), Galeon, and other Gecko-based browsers (see the notice
-	regarding Gecko 1.7 above). Also WebKit-based Epiphany (2.22.3) works.</li>
+	<li>Epiphany (2.22.3), Galeon, and other Gecko-based browsers. Also WebKit-based Epiphany (2.22.3) works.</li>
     <li>Konqueror 4.2 (3.5.x does not work)</li>
     <li>Nokia Internet Tablet N800 and N810 (ITOS 2008, Opera-based browser).</li>
 </ul>
