Most "itmill-toolkit" changed to "vaadin" for #2904
svn changeset:7774 branch:6.0

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -171,7 +171,7 @@
 				<div class="library">
 					<h5>Library</h5>
 					<p>Contains all you need to start a new Toolkit project (binaries, sources, default 
-					themes and widgetsets). <a href="itmill-toolkit-@version@.jar">Toolkit JAR</a></p>
+					themes and widgetsets). <a href="vaadin-@version@.jar">Toolkit JAR</a></p>
 				</div>
 				
 				<div class="documentation">
