--- a/WebContent/license/licensing-guidelines.html
+++ b/WebContent/license/licensing-guidelines.html
@@ -252,8 +252,8 @@ available from other locations.
 * Apache Commons FileUpload
   License: Apache License v. 2.0 (above)
   Source code availability: http://commons.apache.org/fileupload/
-    modifications are at com/itmill/toolkit/external 
-    within itmill-toolkit-@platform@-@version@.jar
+    modifications are at com/vaadin/external 
+    within vaadin-@platform@-@version@.jar
 
 * Google Web Toolkit (GWT) - Google Maps API
   License: Apache Software License  
