--- a/WebContent/release-notes.html
+++ b/WebContent/release-notes.html
@@ -34,7 +34,7 @@ backward compatible.</p>
 <h2>Package for the experimental GWT Out-of-Process Hosted Mode</h2>
 
 <p>We provide a separate (platform independent) installation package
-(<tt>itmill-toolkit-oophm-<version></version>.tar.gz</tt>) for the
+(<tt>vaadin-oophm-<version></version>.tar.gz</tt>) for the
 experimental Out of Process Hosted Mode (OOPHM) of GWT, which allows
 debugging client-side code in GWT Hosted Mode with a regular web
 browser. Using the OOPHM requires installing a browser plugin (available
