--- a/WebContent/multiapp.html
+++ b/WebContent/multiapp.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" style="width:100%;height:100%;border:0;margin:0;">
 <head>
-<title>IT Mill Toolkit 5</title>
+<title>Multiple embedded applications</title>
 <script type="text/javascript">
-	var itmill = {
+	var vaadin = {
 		toolkitConfigurations: {
 			'fb' :{
 				appUri:'/FeatureBrowser', 
